gke/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: payment-service-clalanne
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: payment-service-clalanne
  type: ClusterIP
